--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -31,3 +31,32 @@ jobs:
         with:
           name: bandit-report
           path: bandit_report.json
+
+  docker-scout-scan:
+    name: Docker Scout CVE Scan
+    runs-on: ubuntu-latest
+    needs: bandit-sast 
+
+    steps: 
+      - name: Checkout Repo
+        uses: actions/checkout@v3,
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2,
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }},
+
+     -  name: Build Docker Image
+        run: |
+          docker build -t myuser/pygoat:test .,
+
+     - name: Run Docker Scout CVE Scan
+       uses: docker/scout-action@v1
+       with:
+         command: cves
+         image: myuser/pygoat:test
+         only-severities: critical,high
