--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -1,3 +1,4 @@
+
 name: lab10
 
 on: [push, pull_request]
@@ -22,8 +23,7 @@ jobs:
           pip install bandit
 
       - name: Run Bandit
-        run: |
-          bandit -r pygoat -f json -o bandit_report.json --severity-level medium  --confidence-level medium
+        run: bandit -r pygoat -f json -o bandit_report.json
         continue-on-error: true
 
       - name: Upload Bandit Report
@@ -45,18 +45,28 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker Image
         run: |
-          docker build -t myuser/pygoat:test .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/pygoat:test .
+          docker push ${{ secrets.DOCKER_USERNAME }}/pygoat:test
 
       - name: Run Docker Scout CVE Scan
         uses: docker/scout-action@v1
         with:
           command: cves
-          image: myuser/pygoat:test
+          image: ${{ secrets.DOCKER_USERNAME }}/pygoat:test
           only-severities: critical,high
+          ignore-unfixed: true
+          sarif-file: sarif
+          output: scout-results.sarif
+
+      - name: Upload Docker Scout Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-scout-report
+          path: scout-results.sarif
